--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-tsparticles": "^2.12.2",
     "slick-carousel": "^1.8.1",
     "tsparticles": "^3.8.1",
+    "tsparticles-engine": "^2.12.0",
     "tsparticles-slim": "^2.12.0",
     "web-vitals": "^2.1.4"
   },
